Adding login pages

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
   <header class="relative z-10 bg-kalamuBlue text-white text-center py-16 px-4 rounded-b-3xl shadow-lg">
     <h1 class="text-5xl md:text-6xl font-extrabold mb-4 drop-shadow-lg">Welcome to Kalamu!</h1>
     <p class="text-2xl md:text-3xl mb-8 font-semibold drop-shadow">Fun, interactive revision for kids—assignments, quizzes, videos, and audios. Accessible, inclusive, and KICD-aligned.</p>
-    <button class="bg-kalamuBtnBlue text-white font-extrabold px-10 py-4 rounded-full text-2xl shadow-lg hover:bg-kalamuYellow hover:text-kalamuBlue transition-colors border-4 border-kalamuPurple" onclick="scrollToSection('assignments')">Start Learning!</button>
+    <a href="html/login.html" class="bg-kalamuBtnBlue text-white font-extrabold px-10 py-4 rounded-full text-2xl shadow-lg hover:bg-kalamuYellow hover:text-kalamuBlue transition-colors border-4 border-kalamuPurple start-learning-btn">Start Learning!</a>
   </header>
   <main class="relative z-10">
     <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-y-4 gap-x-2 md:gap-y-6 md:gap-x-4 my-14 mx-2 md:mx-8 py-8 bg-transparent">
@@ -113,7 +113,7 @@
     </section>
   </main>
   <footer class="bg-kalamuBlue text-white text-center py-6 text-lg tracking-wide rounded-t-3xl mt-10 shadow-inner">
-    <p>&copy; 2024 Kalamu. Inspired by <a href="https://kalamu.net/welcome" target="_blank" class="text-kalamuYellow underline">Kalamu</a>. All rights reserved.</p>
+    <p>&copy; 2024 Kalamu. All rights reserved.</p>
   </footer>
   <!-- Short Notes Modal -->
   <div id="notesModal" class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-40">
@@ -144,6 +144,8 @@
       </div>
     </div>
   </div>
+  <!-- Kalamu Mascot Animation Placeholder -->
+  <div class="kalamu-mascot-animation"></div>
   <script src="js/script.js"></script>
 </body>
 </html> 
