--- a/public/html/login.html
+++ b/public/html/login.html
@@ -8,10 +8,12 @@
 </head>
 <body class="body-bg">
   <div class="background-overlay"></div>
+  <div id="kalamuHeader"></div>
   <main class="signup-main">
-    <div class="kalamu-mascot-animation"></div>
     <section class="signup-container">
       <form id="signupForm" class="signup-form">
+        <!-- Progress Bar -->
+        <div class="signup-progress-bar"><div class="signup-progress" id="signupProgress"></div></div>
         <!-- Step 1: Login or Sign Up -->
         <div class="signup-step step-1">
           <h2 class="signup-title">Welcome to Kalamu!</h2>
@@ -29,8 +31,8 @@
             <button type="button" class="grade-btn" onclick="showStep(3, 'grade4')">Grade 4</button>
             <button type="button" class="grade-btn" onclick="showStep(3, 'grade5')">Grade 5</button>
             <button type="button" class="grade-btn" onclick="showStep(3, 'grade6')">Grade 6</button>
-            <!-- Add more grades as needed -->
           </div>
+          <button type="button" class="signup-btn back-btn" onclick="showStep(1)">Back</button>
         </div>
         <!-- Step 3: Interests (Sign Up) -->
         <div class="signup-step step-3" style="display:none;">
@@ -42,12 +44,20 @@
             <label class="interest-item"><input type="checkbox" name="interest" value="Music"> <span class="interest-icon">🎵</span> Music</label>
             <label class="interest-item"><input type="checkbox" name="interest" value="Stories"> <span class="interest-icon">📚</span> Stories</label>
             <label class="interest-item"><input type="checkbox" name="interest" value="Games"> <span class="interest-icon">🎮</span> Games</label>
-            <!-- Add more interests as needed -->
           </div>
           <button type="button" class="signup-btn" onclick="showStep(4)">Next</button>
+          <button type="button" class="signup-btn back-btn" onclick="showStep(2, 'signup')">Back</button>
         </div>
-        <!-- Step 4: Fun Confirmation -->
+        <!-- Step 4: Parent/Guardian Info (optional) -->
         <div class="signup-step step-4" style="display:none;">
+          <h2 class="signup-title">Parent/Guardian Info (Optional)</h2>
+          <input type="text" class="signup-input" placeholder="Parent/Guardian Name">
+          <input type="email" class="signup-input" placeholder="Parent/Guardian Email">
+          <button type="button" class="signup-btn" onclick="showStep(5)">Next</button>
+          <button type="button" class="signup-btn back-btn" onclick="showStep(3)">Back</button>
+        </div>
+        <!-- Step 5: Fun Confirmation -->
+        <div class="signup-step step-5" style="display:none;">
           <div class="kalamu-mascot-animation"></div>
           <h2 class="signup-title">You're all set!</h2>
           <p class="signup-desc">Kalamu is excited to learn with you! 🎉</p>
@@ -57,12 +67,24 @@
         <div class="signup-step step-login" style="display:none;">
           <h2 class="signup-title">Welcome back!</h2>
           <input type="text" class="signup-input" placeholder="Username" required>
-          <input type="password" class="signup-input" placeholder="Password" required>
+          <div class="signup-password-wrap">
+            <input type="password" class="signup-input" id="loginPassword" placeholder="Password" required>
+            <label class="show-password-label"><input type="checkbox" id="showPasswordToggle"> Show Password</label>
+          </div>
+          <a href="#" class="forgot-password-link">Forgot Password?</a>
           <button type="submit" class="signup-btn">Login</button>
+          <button type="button" class="signup-btn back-btn" onclick="showStep(1)">Back</button>
         </div>
       </form>
+      <div class="fun-fact-area" id="funFactArea"></div>
     </section>
   </main>
+  <div id="kalamuFooter"></div>
   <script src="../js/signup.js"></script>
+  <script>
+    // Load header and footer components
+    fetch('header.html').then(r=>r.text()).then(html=>{document.getElementById('kalamuHeader').innerHTML=html;});
+    fetch('footer.html').then(r=>r.text()).then(html=>{document.getElementById('kalamuFooter').innerHTML=html;});
+  </script>
 </body>
 </html> 
